--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,28 @@
-
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+# created-by: conda 25.1.1
+ca-certificates=2025.2.25=hecd8cb5_0
+filelock=3.18.0=pypi_0
+fsspec=2025.3.0=pypi_0
+jinja2=3.1.6=pypi_0
+libcxx=14.0.6=h9765a3e_0
+libffi=3.4.4=hecd8cb5_1
+markupsafe=3.0.2=pypi_0
+mpmath=1.3.0=pypi_0
+ncurses=6.4=hcec6c5f_0
+networkx=3.2.1=pypi_0
+openssl=3.0.16=h184c1cd_0
+pip=25.0=py39hecd8cb5_0
+python=3.9.21=hce00570_1
+readline=8.2=hca72f7f_0
+setuptools=75.8.0=py39hecd8cb5_0
+sqlite=3.45.3=h6c40b1e_0
+sympy=1.13.3=pypi_0
+tk=8.6.14=h4d00af3_0
+torch=2.2.2=pypi_0
+typing-extensions=4.12.2=pypi_0
+tzdata=2025a=h04d1e81_0
+wheel=0.45.1=py39hecd8cb5_0
+xz=5.6.4=h46256e1_1
+zlib=1.2.13=h4b97444_1
