--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,9 @@ markupsafe=3.0.2=pypi_0
 mpmath=1.3.0=pypi_0
 ncurses=6.4=hcec6c5f_0
 networkx=3.2.1=pypi_0
+numpy=2.0.2=pypi_0
 openssl=3.0.16=h184c1cd_0
+pillow=11.1.0=pypi_0
 pip=25.0=py39hecd8cb5_0
 platformdirs=4.3.6=pypi_0
 protobuf=5.29.3=pypi_0
@@ -32,6 +34,7 @@ python=3.9.21=hce00570_1
 pyyaml=6.0.2=pypi_0
 readline=8.2=hca72f7f_0
 requests=2.32.3=pypi_0
+ruff=0.11.0=pypi_0
 sentry-sdk=2.23.1=pypi_0
 setproctitle=1.3.5=pypi_0
 setuptools=75.8.0=py39hecd8cb5_0
@@ -41,6 +44,7 @@ sqlite=3.45.3=h6c40b1e_0
 sympy=1.13.3=pypi_0
 tk=8.6.14=h4d00af3_0
 torch=2.2.2=pypi_0
+torchvision=0.17.2=pypi_0
 typing-extensions=4.12.2=pypi_0
 tzdata=2025a=h04d1e81_0
 urllib3=2.3.0=pypi_0
