--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,35 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-# created-by: conda 25.1.1
-annotated-types=0.7.0=pypi_0
-ca-certificates=2025.2.25=hecd8cb5_0
-certifi=2025.1.31=pypi_0
-charset-normalizer=3.4.1=pypi_0
-click=8.1.8=pypi_0
-docker-pycreds=0.4.0=pypi_0
-eval-type-backport=0.2.2=pypi_0
-filelock=3.18.0=pypi_0
-fsspec=2025.3.0=pypi_0
-gitdb=4.0.12=pypi_0
-gitpython=3.1.44=pypi_0
-idna=3.10=pypi_0
-jinja2=3.1.6=pypi_0
-libcxx=14.0.6=h9765a3e_0
-libffi=3.4.4=hecd8cb5_1
-markupsafe=3.0.2=pypi_0
-mpmath=1.3.0=pypi_0
-ncurses=6.4=hcec6c5f_0
-networkx=3.2.1=pypi_0
-numpy=2.0.2=pypi_0
-openssl=3.0.16=h184c1cd_0
-pillow=11.1.0=pypi_0
-pip=25.0=py39hecd8cb5_0
-platformdirs=4.3.6=pypi_0
-protobuf=5.29.3=pypi_0
-psutil=7.0.0=pypi_0
-pydantic=2.10.6=pypi_0
-pydantic-core=2.27.2=pypi_0
-python=3.9.21=hce00570_1
-pyyaml=6.0.2=pypi_0
-readline=8.2=hca72f7f_0
-requests=2.32.3=pypi_0
-ruff=0.11.0=pypi_0
-sentry-sdk=2.23.1=pypi_0
-setproctitle=1.3.5=pypi_0
-setuptools=75.8.0=py39hecd8cb5_0
-six=1.17.0=pypi_0
-smmap=5.0.2=pypi_0
-sqlite=3.45.3=h6c40b1e_0
-sympy=1.13.3=pypi_0
-tk=8.6.14=h4d00af3_0
-torch=2.2.2=pypi_0
-torchvision=0.17.2=pypi_0
-typing-extensions=4.12.2=pypi_0
-tzdata=2025a=h04d1e81_0
-urllib3=2.3.0=pypi_0
-wandb=0.19.8=pypi_0
-wheel=0.45.1=py39hecd8cb5_0
-xz=5.6.4=h46256e1_1
-zlib=1.2.13=h4b97444_1
+annotated-types==0.7.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+docker-pycreds==0.4.0
+eval_type_backport==0.2.2
+filelock==3.18.0
+fsspec==2025.3.0
+gitdb==4.0.12
+GitPython==3.1.44
+idna==3.10
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.2.1
+numpy==2.0.2
+pillow==11.1.0
+platformdirs==4.3.6
+protobuf==5.29.3
+psutil==7.0.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+PyYAML==6.0.2
+requests==2.32.3
+ruff==0.11.0
+sentry-sdk==2.23.1
+setproctitle==1.3.5
+six==1.17.0
+smmap==5.0.2
+sympy==1.13.3
+torch==2.2.2
+torchvision==0.17.2
+typing_extensions==4.12.2
+urllib3==2.3.0
+wandb==0.19.8
