--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.7.0
+attrs==25.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
@@ -21,6 +22,7 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 PyYAML==6.0.2
 requests==2.32.3
+ruff==0.11.1
 sentry-sdk==2.23.1
 setproctitle==1.3.5
 six==1.17.0
