--- a/requirements.txt
+++ b/requirements.txt
@@ -9,17 +9,21 @@ fsspec==2025.3.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.4
+packaging==24.2
 pillow==11.1.0
 platformdirs==4.3.7
+pluggy==1.5.0
 protobuf==5.29.4
 psutil==7.0.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+pytest==8.3.5
 PyYAML==6.0.2
 requests==2.32.3
 ruff==0.11.1
