--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,25 @@
+alembic==1.15.1
 annotated-types==0.7.0
 attrs==25.3.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+colorlog==6.9.0
 docker-pycreds==0.4.0
 filelock==3.18.0
 fsspec==2025.3.0
 gitdb==4.0.12
 GitPython==3.1.44
+greenlet==3.1.1
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
+Mako==1.3.9
 MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.4
+optuna==4.2.1
 packaging==24.2
 pillow==11.1.0
 platformdirs==4.3.7
@@ -31,9 +36,11 @@ sentry-sdk==2.23.1
 setproctitle==1.3.5
 six==1.17.0
 smmap==5.0.2
+SQLAlchemy==2.0.39
 sympy==1.13.3
 torch==2.2.2
 torchvision==0.17.2
+tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3==2.3.0
 wandb==0.19.8
