--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ greenlet==3.1.1
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
+joblib==1.4.2
 Mako==1.3.9
 MarkupSafe==3.0.2
 mpmath==1.3.0
@@ -32,12 +33,15 @@ pytest==8.3.5
 PyYAML==6.0.2
 requests==2.32.3
 ruff==0.11.1
+scikit-learn==1.6.1
+scipy==1.15.2
 sentry-sdk==2.23.1
 setproctitle==1.3.5
 six==1.17.0
 smmap==5.0.2
 SQLAlchemy==2.0.39
 sympy==1.13.3
+threadpoolctl==3.6.0
 torch==2.2.2
 torchvision==0.17.2
 tqdm==4.67.1
